--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,2 @@
-# Test files
+# File test không cần thiết
 test-api.html
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# IDE - Cursor
-.cursor/
-
-# OS Files
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Temporary files
-*.tmp
-*.temp
-*~
-
-# Node modules (nếu có dùng npm/yarn sau này)
-node_modules/
-
-# Environment variables
-.env
-.env.local
-.env.*.local
